# Revival-of-Code

./: README.md  fetch.py  pyproject.toml
src/: benchmark.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_7.py  day_8.py
src/data/: __init__.py  day_3.txt
