[tool.poetry]
name = "revival-of-code"
version = "0.1.0"
description = "This repository contains my answers for the event hosted by PyDis which contains Advent of Code problems from 2015"
license = "MIT License"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
